# CompetitivePrograming

./: .gitignore  800_aa.cpp  800_divisibility.cpp  800_easy_problem.cpp  800_george_accomodation.cpp  800_pangram.cpp  800_presents.cpp  800_queue_at_school.cpp  CMakeLists.txt  build.sh
800/: 800_bear_brother.cpp  800_beautiful_year.cpp  800_boy_girl.cpp  800_calculating_function.cpp  800_drinks.cpp  800_horseshoe.cpp  800_hulk.cpp  800_magnets.cpp  800_stone_onthe_table.cpp  800_ultra_fast_maths.cpp  800_vanya_friends.cpp  800_word_cap.cpp
